force-app/main/default/objects/Account/fields/DreambandID__c.field-meta.xml
<CustomField>
    <fullName>DreambandID__c</fullName>
    <label>Dreamband ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>