force-app/main/default/objects/Account/fields/Dreampass_Checkin_Time__c.field-meta.xml
<CustomField>
    <fullName>Dreampass_Checkin_Time__c</fullName>
    <label>Check In Time</label>
    <type>DateTime</type>
</CustomField>