force-app/main/default/objects/Account/fields/Dreampass_DreambandID__c.field-meta.xml
<CustomField>
    <fullName>Dreampass_DreambandID__c</fullName>
    <label>Dreamband ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>