force-app/main/default/objects/Account/fields/Dreampass_OnsitePCRTestDate__c.field-meta.xml
<CustomField>
    <fullName>Dreampass_OnsitePCRTestDate__c</fullName>
    <label>Onsite PCR Test Date</label>
    <type>DateTime</type>
</CustomField>