force-app/main/default/objects/Account/fields/Dreampass_Revoked__c.field-meta.xml
<CustomField>
    <fullName>Dreampass_Revoked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dreampass Revoked</label>
    <type>Checkbox</type>
</CustomField>