force-app/main/default/objects/Account/fields/DreampassAccess__c.field-meta.xml
<CustomField>
    <fullName>DreampassAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dreampass Access</label>
    <type>Checkbox</type>
</CustomField>