force-app/main/default/objects/Account/fields/PhotoURL__c.field-meta.xml
<CustomField>
    <fullName>PhotoURL__c</fullName>
    <label>PhotoURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>